// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-dt3hl3-0 nTguI"
>
  <h1
    class="profiles__Title-dt3hl3-1 qolZp"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-dt3hl3-2 jdwzQX"
  >
    <li
      class="profiles__Item-dt3hl3-5 dexbBI"
    >
      <img
        class="profiles__Picture-dt3hl3-3 exGKDv"
        data-testid="profile-picture"
        src="/images/users/test.png"
      />
      <p
        class="profiles__Name-dt3hl3-4 fxdboc"
      >
        Test
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-dt3hl3-0 nTguI"
>
  <h1
    class="profiles__Title-dt3hl3-1 qolZp"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-dt3hl3-2 jdwzQX"
  >
    <li
      class="profiles__Item-dt3hl3-5 dexbBI"
    >
      <img
        class="profiles__Picture-dt3hl3-3 exGKDv"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-dt3hl3-4 fxdboc"
      >
        Test
      </p>
    </li>
  </ul>
</div>
`;
